# sphinx-tomlconf

./: LICENSE  README.rst  pyproject.toml  setup.cfg
sphinx_tomlconf/: __init__.py
sphinxcontrib/tomlconf/: __init__.py
tests/: conftest.py
toml_test/source/: basic.rst  conf.py  index.rst  sphinx.toml
