[project]
name            = "sphinx-tomlconf"
version         = "0.1.0"
description     = "Adding toml-based configuration for sphinx"
readme          = "README.md"
requires-python = ">=3.10"
license         = {file = "LICENSE"}
keywords        = []
authors         = [
  {email = "jgrey4296@gmail.com", name  = "J Grey"}
]
classifiers     = [
  "Programming Language :: Python"
]

##-- dependencies
dependencies   = [
    "tomlguard",
    "sphinx",
]

[project.optional-dependencies]
test = [
    "pytest < 7.0.0",
    "pytest-mock"
]

##-- end dependencies

##-- urls
[project.urls]
homepage      = "https://github.com/jgrey4296/sphinxcontrib-tomlconf"
documentation = "https://readthedocs.org/sphinxcontrib-tomlconf"
repository    = "https://github.com/jgrey4296/sphinxcontrib-tomlconf"
changelog     = "https://github.com/jgrey4296/sphinxcontrib-tomlconf/spam/blob/master/CHANGELOG.md"

##-- end urls

##-- entry points
[project.scripts] # CLI
# sphinxcontrib-tomlconf = sphinxcontrib-tomlconf.default:main

[project.gui-scripts] #GUI
# spam-gui      = "spam:main_gui"

[project.entry-points."nothing"] # Plugins
# tomatoes      = "spam:main_tomatoes"

##-- end entry points

##-- build-system
[build-system]
# frontend: https://pypa-build.readthedocs.io/en/latest/index.html
# frontend: https://pdm.fming.dev/latest/
requires = [
         "setuptools >= 63.1.0",
         "wheel >= 0.37.1"
         # https://flit.pypa.io/en/stable/index.html
         # "flit_core > 3.2, <4",
         # https://pdm-backend.fming.dev/
         # "pdm-backend"

]

build-backend = "setuptools.build_meta"
# build-backend = "flit_core.buildapi"
# build-backend = "pdm.backend"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
where      = ["."]
include    = ["sphinx_tomlconf*"]

[tool.setuptools.package-data]
"*" = ["*"]

[tool.setuptools.exclude-package-data]

##-- end build-system

# Tools #######################################################################

##-- pytest
[tool.pytest.ini_options]
log_cli       = false
log_level     = "DEBUG"
log_cli_level = "DEBUG"

##-- end pytest

[tool.bumpver]
version            = "0.1.0"
version_pattern    = "MAJOR.MINOR.PATCH"
commit_message     = "[bump]: version {old_version} -> {new_version}"
tag_message        = "{new_version}"
tag_scope          = "default"
# commit             = true
# tag                = true
# pre_commit_hook  = ""
# post_commit_hook = ""
# push             = true

[tool.bumpver.file_patterns]
"pyproject.toml"   = [
                   '^version\s+=\s+"{version}"$',
                   '^current_version\s+=\s+"{version}"$'
]
"sphinx_tomlconf/__init__.py" = ['^__version__\s+:\s+Final\[str\]\s+=\s+"{version}"']
